--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -1,4 +1,5 @@
 FROM docker.elastic.co/elasticsearch/elasticsearch:6.5.2
-COPY --chown=elasticsearch:elasticsearch elasticsearch.yml /usr/share/elasticsearch/config/
+COPY elasticsearch.yml /usr/share/elasticsearch/config/
+RUN sudo chown -R elasticsearch:elasticsearch /usr/share/elasticsearch/config/
 
 CMD ["elasticsearch", "-Elogger.level=INFO"]
